Add inUrlPrefixes parameter to search to match substring in url.
